# crabmux

./: .cmux_aliases.json  .gitignore  Cargo.toml  README.md  clippy.sh  install.sh
.claude/: settings.local.json
.github/scripts/: bump-version.sh
.github/workflows/: ci.yml  manual-release.yml  release.yml
crabmux/: TESTING.md  run_tests.sh  test_report.txt
crabmux/src/: main.rs
crabmux/tests/: integration_tests.rs
src/: main.rs
tests/: cli_tests.rs  error_handling_tests.rs  file_operations_tests.rs  integration_tests.rs  parsing_tests.rs
