[package]
name = "crabmux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmux"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sysinfo = "0.30"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
