[package]
name = "crabmux"
version = "0.1.1"
edition = "2021"
authors = ["Madhava Jay"]
description = "A modern tmux session manager with an interactive TUI"
repository = "https://github.com/madhavajay/crabmux"
homepage = "https://github.com/madhavajay/crabmux"
documentation = "https://github.com/madhavajay/crabmux"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tmux", "terminal", "tui", "session-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cmux"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sysinfo = "0.30"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
